--- a/.github/workflows/blog-post-workflow.yml
+++ b/.github/workflows/blog-post-workflow.yml
@@ -13,7 +13,22 @@ jobs:
       - uses: actions/checkout@v2
       - uses: gautamkrishnar/blog-post-workflow@master
         with:
-          max_post_count: "100"
+          max_post_count: "20"
+          comment_tag_name: "medium"
           date_format: "UTC:ddd mmm dd yyyy"
           template: "$newline- $date [$title]($url)"
-          feed_list: "https://medium.com/feed/@androiddevelopers,https://www.youtube.com/feeds/videos.xml?channel_id=UCVHFbqXqoYvEWM1Ddxl0QDg,https://android-developers.blogspot.com/atom.xml"
+          feed_list: "https://medium.com/feed/@androiddevelopers"
+      - uses: gautamkrishnar/blog-post-workflow@master
+        with:
+          max_post_count: "20"
+          comment_tag_name: "youtube"
+          date_format: "UTC:ddd mmm dd yyyy"
+          template: "$newline- $date [$title]($url)"
+          feed_list: "https://www.youtube.com/feeds/videos.xml?channel_id=UCVHFbqXqoYvEWM1Ddxl0QDg"
+      - uses: gautamkrishnar/blog-post-workflow@master
+        with:
+          max_post_count: "20"
+          comment_tag_name: "blog"
+          date_format: "UTC:ddd mmm dd yyyy"
+          template: "$newline- $date [$title]($url)"
+          feed_list: "https://android-developers.blogspot.com/atom.xml"
