--- a/.github/workflows/blog-post-workflow.yml
+++ b/.github/workflows/blog-post-workflow.yml
@@ -14,21 +14,21 @@ jobs:
       - uses: gautamkrishnar/blog-post-workflow@master
         with:
           max_post_count: "20"
-          comment_tag_name: "medium"
+          comment_tag_name: "MEDIUM"
           date_format: "UTC:ddd mmm dd yyyy"
           template: "$newline- $date [$title]($url)"
           feed_list: "https://medium.com/feed/@androiddevelopers"
       - uses: gautamkrishnar/blog-post-workflow@master
         with:
           max_post_count: "20"
-          comment_tag_name: "youtube"
+          comment_tag_name: "YOUTUBE"
           date_format: "UTC:ddd mmm dd yyyy"
           template: "$newline- $date [$title]($url)"
           feed_list: "https://www.youtube.com/feeds/videos.xml?channel_id=UCVHFbqXqoYvEWM1Ddxl0QDg"
       - uses: gautamkrishnar/blog-post-workflow@master
         with:
           max_post_count: "20"
-          comment_tag_name: "blog"
+          comment_tag_name: "BLOG"
           date_format: "UTC:ddd mmm dd yyyy"
           template: "$newline- $date [$title]($url)"
           feed_list: "https://android-developers.blogspot.com/atom.xml"
