--- a/.github/workflows/blog-post-workflow.yml
+++ b/.github/workflows/blog-post-workflow.yml
@@ -14,21 +14,57 @@ jobs:
       - uses: gautamkrishnar/blog-post-workflow@master
         with:
           max_post_count: "20"
-          comment_tag_name: "MEDIUM"
+          comment_tag_name: "ANDROID_DEVS_MEDIUM"
           date_format: "UTC:ddd mmm dd yyyy"
           template: "$newline- $date [$title]($url)"
           feed_list: "https://medium.com/feed/androiddevelopers"
       - uses: gautamkrishnar/blog-post-workflow@master
         with:
           max_post_count: "20"
-          comment_tag_name: "YOUTUBE"
+          comment_tag_name: "FIREBASE_DEVS_MEDIUM"
+          date_format: "UTC:ddd mmm dd yyyy"
+          template: "$newline- $date [$title]($url)"
+          feed_list: "https://medium.com/feed/firebase-developers"
+      - uses: gautamkrishnar/blog-post-workflow@master
+        with:
+          max_post_count: "20"
+          comment_tag_name: "GOOGLE_PLAY_MEDIUM"
+          date_format: "UTC:ddd mmm dd yyyy"
+          template: "$newline- $date [$title]($url)"
+          feed_list: "https://medium.com/feed/googleplaydev"
+      - uses: gautamkrishnar/blog-post-workflow@master
+        with:
+          max_post_count: "20"
+          comment_tag_name: "ANDROID_YOUTUBE"
           date_format: "UTC:ddd mmm dd yyyy"
           template: "$newline- $date [$title]($url)"
           feed_list: "https://www.youtube.com/feeds/videos.xml?channel_id=UCVHFbqXqoYvEWM1Ddxl0QDg"
       - uses: gautamkrishnar/blog-post-workflow@master
         with:
           max_post_count: "20"
-          comment_tag_name: "BLOG"
+          comment_tag_name: "FIREBASE_YOUTUBE"
+          date_format: "UTC:ddd mmm dd yyyy"
+          template: "$newline- $date [$title]($url)"
+          feed_list: "https://www.youtube.com/feeds/videos.xml?channel_id=UCP4bf6IHJJQehibu6ai__cg"
+      - uses: gautamkrishnar/blog-post-workflow@master
+        with:
+          max_post_count: "20"
+          comment_tag_name: "ANDROID_DEVS_BLOG"
           date_format: "UTC:ddd mmm dd yyyy"
           template: "$newline- $date [$title]($url)"
           feed_list: "https://android-developers.blogspot.com/atom.xml"
+      - uses: gautamkrishnar/blog-post-workflow@master
+        with:
+          max_post_count: "20"
+          comment_tag_name: "FIREBASE_BLOG"
+          date_format: "UTC:ddd mmm dd yyyy"
+          template: "$newline- $date [$title]($url)"
+          feed_list: "https://firebase.blogspot.com/atom.xml"
+      - uses: gautamkrishnar/blog-post-workflow@master
+        with:
+          max_post_count: "20"
+          comment_tag_name: "MATERIAL_DESIGN_BLOG"
+          date_format: "UTC:ddd mmm dd yyyy"
+          template: "$newline- $date [$title]($url)"
+          feed_list: "https://material.io/feed.xml"
+          
