--- a/.github/workflows/blog-post-workflow.yml
+++ b/.github/workflows/blog-post-workflow.yml
@@ -19,7 +19,7 @@ jobs:
           max_post_count: "20"
           comment_tag_name: "ANDROID_DEVS_MEDIUM"
           date_format: "UTC:ddd mmm dd yyyy"
-          template: $TEMPLATE
+          template: ${{ TEMPLATE }}
           feed_list: "https://medium.com/feed/androiddevelopers"
       - uses: gautamkrishnar/blog-post-workflow@master
         with:
