--- a/.github/workflows/blog-post-workflow.yml
+++ b/.github/workflows/blog-post-workflow.yml
@@ -7,6 +7,7 @@ on:
   
 env:
   TEMPLATE: "$newline- $date - [$title]($url)"
+  DATE_FORMAT: "UTC:ddd mmm dd yyyy"
 
 jobs:
   update-readme-with-blog:
@@ -18,70 +19,70 @@ jobs:
         with:
           max_post_count: "20"
           comment_tag_name: "ANDROID_DEVS_MEDIUM"
-          date_format: "UTC:ddd mmm dd yyyy"
+          date_format: ${{ env.DATE_FORMAT }}
           template: ${{ env.TEMPLATE }}
           feed_list: "https://medium.com/feed/androiddevelopers"
       - uses: gautamkrishnar/blog-post-workflow@master
         with:
           max_post_count: "20"
           comment_tag_name: "FIREBASE_DEVS_MEDIUM"
-          date_format: "UTC:ddd mmm dd yyyy"
-          template: "$newline- $date [$title]($url)"
+          date_format: ${{ env.DATE_FORMAT }}
+          template: ${{ env.TEMPLATE }}
           feed_list: "https://medium.com/feed/firebase-developers"
       - uses: gautamkrishnar/blog-post-workflow@master
         with:
           max_post_count: "20"
           comment_tag_name: "GOOGLE_PLAY_MEDIUM"
-          date_format: "UTC:ddd mmm dd yyyy"
-          template: "$newline- $date [$title]($url)"
+          date_format: ${{ env.DATE_FORMAT }}
+          template: ${{ env.TEMPLATE }}
           feed_list: "https://medium.com/feed/googleplaydev"
       - uses: gautamkrishnar/blog-post-workflow@master
         with:
           max_post_count: "20"
           comment_tag_name: "ANDROID_YOUTUBE"
-          date_format: "UTC:ddd mmm dd yyyy"
-          template: "$newline- $date [$title]($url)"
+          date_format: ${{ env.DATE_FORMAT }}
+          template: ${{ env.TEMPLATE }}
           feed_list: "https://www.youtube.com/feeds/videos.xml?channel_id=UCVHFbqXqoYvEWM1Ddxl0QDg"
       - uses: gautamkrishnar/blog-post-workflow@master
         with:
           max_post_count: "20"
           comment_tag_name: "FIREBASE_YOUTUBE"
-          date_format: "UTC:ddd mmm dd yyyy"
-          template: "$newline- $date [$title]($url)"
+          date_format: ${{ env.DATE_FORMAT }}
+          template: ${{ env.TEMPLATE }}
           feed_list: "https://www.youtube.com/feeds/videos.xml?channel_id=UCP4bf6IHJJQehibu6ai__cg"
       - uses: gautamkrishnar/blog-post-workflow@master
         with:
           max_post_count: "20"
           comment_tag_name: "MATERIAL_DESIGN_YOUTUBE"
-          date_format: "UTC:ddd mmm dd yyyy"
-          template: "$newline- $date [$title]($url)"
+          date_format: ${{ env.DATE_FORMAT }}
+          template: ${{ env.TEMPLATE }}
           feed_list: "https://www.youtube.com/feeds/videos.xml?channel_id=UCcnSNQb0tLVd8uT7gzI8duA"
       - uses: gautamkrishnar/blog-post-workflow@master
         with:
           max_post_count: "20"
           comment_tag_name: "ANDROID_DEVS_BLOG"
-          date_format: "UTC:ddd mmm dd yyyy"
-          template: "$newline- $date [$title]($url)"
+          date_format: ${{ env.DATE_FORMAT }}
+          template: ${{ env.TEMPLATE }}
           feed_list: "https://android-developers.blogspot.com/atom.xml"
       - uses: gautamkrishnar/blog-post-workflow@master
         with:
           max_post_count: "20"
           comment_tag_name: "FIREBASE_BLOG"
-          date_format: "UTC:ddd mmm dd yyyy"
-          template: "$newline- $date [$title]($url)"
+          date_format: ${{ env.DATE_FORMAT }}
+          template: ${{ env.TEMPLATE }}
           feed_list: "https://firebase.blogspot.com/atom.xml"
       - uses: gautamkrishnar/blog-post-workflow@master
         with:
           max_post_count: "20"
           comment_tag_name: "MATERIAL_DESIGN_BLOG"
-          date_format: "UTC:ddd mmm dd yyyy"
-          template: "$newline- $date [$title]($url)"
+          date_format: ${{ env.DATE_FORMAT }}
+          template: ${{ env.TEMPLATE }}
           feed_list: "https://material.io/feed.xml"
       - uses: gautamkrishnar/blog-post-workflow@master
         with:
           max_post_count: "20"
           comment_tag_name: "ANDROID_DEVS_BACKSTAGE"
-          date_format: "UTC:ddd mmm dd yyyy"
-          template: "$newline- $date [$title]($url)"
+          date_format: ${{ env.DATE_FORMAT }}
+          template: ${{ env.TEMPLATE }}
           feed_list: "http://adbackstage.googledevelopers.libsynpro.com/rss"
           
