--- a/.github/workflows/blog-post-workflow.yml
+++ b/.github/workflows/blog-post-workflow.yml
@@ -8,6 +8,8 @@ on:
 env:
   TEMPLATE: "$newline- $date - [$title]($url)"
   DATE_FORMAT: "UTC:mmm dd yyyy"
+  COMMITTER_EMAIL: "dipien2020@gmail.com"
+  COMMITTER_USERNAME: "dipien-ci"
 
 jobs:
   update-readme-with-blog:
@@ -21,6 +23,8 @@ jobs:
           comment_tag_name: "ANDROID_DEVS_MEDIUM"
           date_format: ${{ env.DATE_FORMAT }}
           template: ${{ env.TEMPLATE }}
+          committer_username: ${{ env.COMMITTER_USERNAME }}
+          committer_email: ${{ env.COMMITTER_EMAIL }}
           feed_list: "https://medium.com/feed/androiddevelopers"
       - uses: gautamkrishnar/blog-post-workflow@master
         with:
@@ -28,6 +32,8 @@ jobs:
           comment_tag_name: "FIREBASE_DEVS_MEDIUM"
           date_format: ${{ env.DATE_FORMAT }}
           template: ${{ env.TEMPLATE }}
+          committer_username: ${{ env.COMMITTER_USERNAME }}
+          committer_email: ${{ env.COMMITTER_EMAIL }}
           feed_list: "https://medium.com/feed/firebase-developers"
       - uses: gautamkrishnar/blog-post-workflow@master
         with:
@@ -35,6 +41,8 @@ jobs:
           comment_tag_name: "GOOGLE_PLAY_MEDIUM"
           date_format: ${{ env.DATE_FORMAT }}
           template: ${{ env.TEMPLATE }}
+          committer_username: ${{ env.COMMITTER_USERNAME }}
+          committer_email: ${{ env.COMMITTER_EMAIL }}
           feed_list: "https://medium.com/feed/googleplaydev"
       - uses: gautamkrishnar/blog-post-workflow@master
         with:
@@ -42,6 +50,8 @@ jobs:
           comment_tag_name: "ANDROID_YOUTUBE"
           date_format: ${{ env.DATE_FORMAT }}
           template: ${{ env.TEMPLATE }}
+          committer_username: ${{ env.COMMITTER_USERNAME }}
+          committer_email: ${{ env.COMMITTER_EMAIL }}
           feed_list: "https://www.youtube.com/feeds/videos.xml?channel_id=UCVHFbqXqoYvEWM1Ddxl0QDg"
       - uses: gautamkrishnar/blog-post-workflow@master
         with:
@@ -49,13 +59,18 @@ jobs:
           comment_tag_name: "FIREBASE_YOUTUBE"
           date_format: ${{ env.DATE_FORMAT }}
           template: ${{ env.TEMPLATE }}
+          committer_username: ${{ env.COMMITTER_USERNAME }}
+          committer_email: ${{ env.COMMITTER_EMAIL }}
           feed_list: "https://www.youtube.com/feeds/videos.xml?channel_id=UCP4bf6IHJJQehibu6ai__cg"
+          item_exec: post.title = post.title.replace('|','\|');
       - uses: gautamkrishnar/blog-post-workflow@master
         with:
           max_post_count: "20"
           comment_tag_name: "MATERIAL_DESIGN_YOUTUBE"
           date_format: ${{ env.DATE_FORMAT }}
           template: ${{ env.TEMPLATE }}
+          committer_username: ${{ env.COMMITTER_USERNAME }}
+          committer_email: ${{ env.COMMITTER_EMAIL }}
           feed_list: "https://www.youtube.com/feeds/videos.xml?channel_id=UCcnSNQb0tLVd8uT7gzI8duA"
       - uses: gautamkrishnar/blog-post-workflow@master
         with:
@@ -63,6 +78,8 @@ jobs:
           comment_tag_name: "ANDROID_DEVS_BLOG"
           date_format: ${{ env.DATE_FORMAT }}
           template: ${{ env.TEMPLATE }}
+          committer_username: ${{ env.COMMITTER_USERNAME }}
+          committer_email: ${{ env.COMMITTER_EMAIL }}
           feed_list: "https://android-developers.blogspot.com/atom.xml"
       - uses: gautamkrishnar/blog-post-workflow@master
         with:
@@ -70,6 +87,8 @@ jobs:
           comment_tag_name: "FIREBASE_BLOG"
           date_format: ${{ env.DATE_FORMAT }}
           template: ${{ env.TEMPLATE }}
+          committer_username: ${{ env.COMMITTER_USERNAME }}
+          committer_email: ${{ env.COMMITTER_EMAIL }}
           feed_list: "https://firebase.googleblog.com/atom.xml"
       - uses: gautamkrishnar/blog-post-workflow@master
         with:
@@ -77,6 +96,8 @@ jobs:
           comment_tag_name: "MATERIAL_DESIGN_BLOG"
           date_format: ${{ env.DATE_FORMAT }}
           template: ${{ env.TEMPLATE }}
+          committer_username: ${{ env.COMMITTER_USERNAME }}
+          committer_email: ${{ env.COMMITTER_EMAIL }}
           feed_list: "https://material.io/feed.xml"
       - uses: gautamkrishnar/blog-post-workflow@master
         with:
@@ -84,5 +105,7 @@ jobs:
           comment_tag_name: "ANDROID_DEVS_BACKSTAGE"
           date_format: ${{ env.DATE_FORMAT }}
           template: ${{ env.TEMPLATE }}
+          committer_username: ${{ env.COMMITTER_USERNAME }}
+          committer_email: ${{ env.COMMITTER_EMAIL }}
           feed_list: "http://adbackstage.googledevelopers.libsynpro.com/rss"
           
