--- a/.github/workflows/blog-post-workflow.yml
+++ b/.github/workflows/blog-post-workflow.yml
@@ -10,6 +10,7 @@ env:
   DATE_FORMAT: "UTC:mmm dd yyyy"
   COMMITTER_EMAIL: "dipien2020@gmail.com"
   COMMITTER_USERNAME: "dipien-ci"
+  ITEM_EXEC: "post.title = post.title.replace('|',' ');"
 
 jobs:
   update-readme-with-blog:
@@ -27,6 +28,7 @@ jobs:
           committer_username: ${{ env.COMMITTER_USERNAME }}
           committer_email: ${{ env.COMMITTER_EMAIL }}
           feed_list: "https://medium.com/feed/androiddevelopers"
+          item_exec: ${{ env.ITEM_EXEC }}
           commit_message: "Updated with the latest Android Developors Medium posts"
       - name: Firebase Developers - Medium Publication
         uses: gautamkrishnar/blog-post-workflow@master
@@ -38,6 +40,7 @@ jobs:
           committer_username: ${{ env.COMMITTER_USERNAME }}
           committer_email: ${{ env.COMMITTER_EMAIL }}
           feed_list: "https://medium.com/feed/firebase-developers"
+          item_exec: ${{ env.ITEM_EXEC }}
           commit_message: "Updated with the latest Firebase Developers Medium posts"
       - name: Google Play - Medium Publication
         uses: gautamkrishnar/blog-post-workflow@master
@@ -49,6 +52,7 @@ jobs:
           committer_username: ${{ env.COMMITTER_USERNAME }}
           committer_email: ${{ env.COMMITTER_EMAIL }}
           feed_list: "https://medium.com/feed/googleplaydev"
+          item_exec: ${{ env.ITEM_EXEC }}
           commit_message: "Updated with the latest Google Play Medium posts"
       - name: Android Developers - Youtube Channel
         uses: gautamkrishnar/blog-post-workflow@master
@@ -60,6 +64,7 @@ jobs:
           committer_username: ${{ env.COMMITTER_USERNAME }}
           committer_email: ${{ env.COMMITTER_EMAIL }}
           feed_list: "https://www.youtube.com/feeds/videos.xml?channel_id=UCVHFbqXqoYvEWM1Ddxl0QDg"
+          item_exec: ${{ env.ITEM_EXEC }}
           commit_message: "Updated with the latest Android Developors Youtube videos"
       - name: Firebase - Youtube Channel
         uses: gautamkrishnar/blog-post-workflow@master
@@ -71,11 +76,7 @@ jobs:
           committer_username: ${{ env.COMMITTER_USERNAME }}
           committer_email: ${{ env.COMMITTER_EMAIL }}
           feed_list: "https://www.youtube.com/feeds/videos.xml?channel_id=UCP4bf6IHJJQehibu6ai__cg"
-          item_exec: |
-                    console.log(post.title);
-                    post.title = post.title.replace('|',' ');
-                    console.log(post.title);
-          
+          item_exec: ${{ env.ITEM_EXEC }}
           commit_message: "Updated with the latest Firebase Youtube videos"
       - name: Material Design - Youtube Channel
         uses: gautamkrishnar/blog-post-workflow@master
@@ -87,6 +88,7 @@ jobs:
           committer_username: ${{ env.COMMITTER_USERNAME }}
           committer_email: ${{ env.COMMITTER_EMAIL }}
           feed_list: "https://www.youtube.com/feeds/videos.xml?channel_id=UCcnSNQb0tLVd8uT7gzI8duA"
+          item_exec: ${{ env.ITEM_EXEC }}
           commit_message: "Updated with the latest Material Design Youtube videos"
       - name: Android Developers Blog
         uses: gautamkrishnar/blog-post-workflow@master
@@ -98,6 +100,7 @@ jobs:
           committer_username: ${{ env.COMMITTER_USERNAME }}
           committer_email: ${{ env.COMMITTER_EMAIL }}
           feed_list: "https://android-developers.blogspot.com/atom.xml"
+          item_exec: ${{ env.ITEM_EXEC }}
           commit_message: "Updated with the latest Android Developors Blog posts"
       - name: The Firebase Blog
         uses: gautamkrishnar/blog-post-workflow@master
@@ -109,6 +112,7 @@ jobs:
           committer_username: ${{ env.COMMITTER_USERNAME }}
           committer_email: ${{ env.COMMITTER_EMAIL }}
           feed_list: "https://firebase.googleblog.com/atom.xml"
+          item_exec: ${{ env.ITEM_EXEC }}
           commit_message: "Updated with the latest Firebase Blog posts"
       - name: Material Design Blog
         uses: gautamkrishnar/blog-post-workflow@master
@@ -120,6 +124,7 @@ jobs:
           committer_username: ${{ env.COMMITTER_USERNAME }}
           committer_email: ${{ env.COMMITTER_EMAIL }}
           feed_list: "https://material.io/feed.xml"
+          item_exec: ${{ env.ITEM_EXEC }}
           commit_message: "Updated with the latest Material Design Blog posts"
       - name: Android Developers Backstage - Podcasts
         uses: gautamkrishnar/blog-post-workflow@master
@@ -131,5 +136,6 @@ jobs:
           committer_username: ${{ env.COMMITTER_USERNAME }}
           committer_email: ${{ env.COMMITTER_EMAIL }}
           feed_list: "http://adbackstage.googledevelopers.libsynpro.com/rss"
+          item_exec: ${{ env.ITEM_EXEC }}
           commit_message: "Updated with the latest Android Developors Backstage podcats"
           
