--- a/.github/workflows/blog-post-workflow.yml
+++ b/.github/workflows/blog-post-workflow.yml
@@ -2,7 +2,7 @@ name: Latest blog post workflow
 on:
   schedule:
     # Runs every day
-    - cron: '0 15 * * *'
+    - cron: '0 */1 * * *'
   workflow_dispatch:
   
 env:
