--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-cayman
-title: [Android News]
-description: [The latest news and resources about android, from all the official channels]
+title: Android News
+description: The latest news and resources about android, from all the official channels
