--- a/.github/workflows/blog-post-workflow.yml
+++ b/.github/workflows/blog-post-workflow.yml
@@ -10,7 +10,7 @@ env:
   DATE_FORMAT: "UTC:mmm dd yyyy"
   COMMITTER_EMAIL: "dipien2020@gmail.com"
   COMMITTER_USERNAME: "dipien-ci"
-  ITEM_EXEC: "post.title = post.title.replace('|','-');if (post.url.startsWith('https://www.youtube.com')) {  post.feed = 'Youtube' };if (post.url.startsWith('https://medium.com')) {  post.feed = 'Medium' };if (post.url.startsWith('http://feedproxy.google.com')) {  post.feed = 'Blog' };if (post.url.startsWith('http://adbackstage.googledevelopers.libsynpro.com')) {  post.feed = 'Podcast' };"
+  ITEM_EXEC: "post.title = post.title.replace('|','-');if (post.url.startsWith('https://www.youtube.com')) {  post.feed = 'Youtube' };if (post.url.startsWith('https://medium.com')) {  post.feed = 'Medium' };if (post.url.startsWith('http://feedproxy.google.com')) {  post.feed = 'Blog' };if (post.url.startsWith('http://adbackstage.googledevelopers.libsynpro.com')) {  post.feed = 'Podcast' };if (post.url.startsWith('https://material.io/')) {  post.feed = 'Blog' };"
 
 jobs:
   update-readme-with-blog:
