Add feed to each item (#2)

--- a/.github/workflows/blog-post-workflow.yml
+++ b/.github/workflows/blog-post-workflow.yml
@@ -6,11 +6,11 @@ on:
   workflow_dispatch:
   
 env:
-  TEMPLATE: "$newline- $date - [$title]($url)"
+  TEMPLATE: "$newline- $date - [$title]($url) [$feed]"
   DATE_FORMAT: "UTC:mmm dd yyyy"
   COMMITTER_EMAIL: "dipien2020@gmail.com"
   COMMITTER_USERNAME: "dipien-ci"
-  ITEM_EXEC: "post.title = post.title.replace('|','-');"
+  ITEM_EXEC: "post.title = post.title.replace('|','-');if (post.url.startsWith('https://www.youtube.com')) {  post.feed = 'Youtube' };if (post.url.startsWith('https://medium.com')) {  post.feed = 'Medium' };if (post.url.startsWith('http://feedproxy.google.com')) {  post.feed = 'Blog' };if (post.url.startsWith('http://adbackstage.googledevelopers.libsynpro.com')) {  post.feed = 'Podcast' };if (post.url.startsWith('https://material.io/')) {  post.feed = 'Blog' };"
 
 jobs:
   update-readme-with-blog:
@@ -30,4 +30,5 @@ jobs:
           committer_email: ${{ env.COMMITTER_EMAIL }}
           feed_list: "https://medium.com/feed/androiddevelopers,https://medium.com/feed/firebase-developers,https://medium.com/feed/googleplaydev,https://www.youtube.com/feeds/videos.xml?channel_id=UCVHFbqXqoYvEWM1Ddxl0QDg,https://www.youtube.com/feeds/videos.xml?channel_id=UCP4bf6IHJJQehibu6ai__cg,https://www.youtube.com/feeds/videos.xml?channel_id=UCcnSNQb0tLVd8uT7gzI8duA,https://android-developers.blogspot.com/atom.xml,https://firebase.googleblog.com/atom.xml,https://material.io/feed.xml,http://adbackstage.googledevelopers.libsynpro.com/rss"
           item_exec: ${{ env.ITEM_EXEC }}
+          custom_tags: "feed/feed/"
           commit_message: "Updated with the latest news"
