--- a/.github/workflows/news-workflow.yml
+++ b/.github/workflows/news-workflow.yml
@@ -18,7 +18,7 @@ jobs:
           max_post_count: "100"
           comment_tag_name: "NEWS"
           date_format: "UTC:mmm dd yyyy"
-          template: "$newline|$date|$feed|[$title]($url)|"
+          template: "$newline- $date - $feed - [$title]($url)"
           committer_username: ${{ secrets.gitUserName }}
           committer_email: ${{ secrets.gitUserEmail }}
           feed_list: "https://medium.com/feed/androiddevelopers,https://medium.com/feed/firebase-developers,https://medium.com/feed/googleplaydev,https://www.youtube.com/feeds/videos.xml?channel_id=UCVHFbqXqoYvEWM1Ddxl0QDg,https://www.youtube.com/feeds/videos.xml?channel_id=UCP4bf6IHJJQehibu6ai__cg,https://www.youtube.com/feeds/videos.xml?channel_id=UCcnSNQb0tLVd8uT7gzI8duA,https://android-developers.blogspot.com/atom.xml,https://firebase.googleblog.com/atom.xml,https://material.io/feed.xml,http://adbackstage.googledevelopers.libsynpro.com/rss"
