--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,4 @@
 theme: jekyll-theme-cayman
 title: Android News
 description: The latest news and resources about android, from all the official channels
+google_analytics: G-ZZZS1SDD28
