--- a/.github/workflows/news-workflow.yml
+++ b/.github/workflows/news-workflow.yml
@@ -13,21 +13,16 @@ jobs:
       - uses: actions/checkout@v2
       - name: News
         # https://github.com/gautamkrishnar/blog-post-workflow
-        uses: gautamkrishnar/blog-post-workflow@1.5.7
+        uses: gautamkrishnar/blog-post-workflow@1.5.8
         with:
           max_post_count: "100"
           comment_tag_name: "NEWS"
           date_format: "UTC:mmm dd yyyy"
-          template: "$newline- $date - $feed - [$title]($url)"
+          template: "$newline- $date - $feedName - [$title]($url)"
           committer_username: ${{ secrets.GIT_USER_NAME }}
           committer_email: ${{ secrets.GIT_USER_EMAIL }}
           feed_list: "https://medium.com/feed/androiddevelopers,https://medium.com/feed/firebase-developers,https://medium.com/feed/googleplaydev,https://www.youtube.com/feeds/videos.xml?channel_id=UCVHFbqXqoYvEWM1Ddxl0QDg,https://www.youtube.com/feeds/videos.xml?channel_id=UCP4bf6IHJJQehibu6ai__cg,https://www.youtube.com/feeds/videos.xml?channel_id=UCcnSNQb0tLVd8uT7gzI8duA,https://android-developers.blogspot.com/atom.xml,https://firebase.googleblog.com/atom.xml,https://material.io/feed.xml,http://adbackstage.googledevelopers.libsynpro.com/rss"
-          item_exec: |
-                    post.title = post.title.replace('|','-');
-                    if (post.url.startsWith('https://www.youtube.com')) {  post.feed = 'Youtube' };
-                    if (post.url.startsWith('https://medium.com')) {  post.feed = 'Medium' };
-                    if (post.url.startsWith('http://feedproxy.google.com')) {  post.feed = 'Blog' };
-                    if (post.url.startsWith('http://adbackstage.googledevelopers.libsynpro.com')) {  post.feed = 'Podcast' };
-                    if (post.url.startsWith('https://material.io/')) {  post.feed = 'Blog' };
+          feed_names: "[Android Developers - Medium Publication](https://medium.com/androiddevelopers),[Firebase Developers - Medium Publication](https://medium.com/firebase-developers),[Google Play - Medium Publication](https://medium.com/googleplaydev),[Android Developers - Youtube Channel](https://www.youtube.com/c/AndroidDevelopers),[Firebase - Youtube Channel](https://www.youtube.com/user/Firebase),[Material Design - Youtube Channel](https://www.youtube.com/c/MaterialDesign),[Android Developers Blog](https://android-developers.googleblog.com/),[The Firebase Blog](https://firebase.googleblog.com/),[Material Design Blog](https://material.io/blog),[Android Developers Backstage - Podcasts](https://adbackstage.libsyn.com/)"
+          item_exec: post.title = post.title.replace('|','-');
           custom_tags: "feed/feed/"
           commit_message: "Updated with the latest news"
