--- a/.github/workflows/news-workflow.yml
+++ b/.github/workflows/news-workflow.yml
@@ -18,11 +18,11 @@ jobs:
           max_post_count: "100"
           comment_tag_name: "NEWS"
           date_format: "UTC:mmm dd yyyy"
-          template: "$newline- $date - $feedName - [$title]($url)"
+          template: "$newline- $date - [$title]($url) - $feedName"
           committer_username: ${{ secrets.GIT_USER_NAME }}
           committer_email: ${{ secrets.GIT_USER_EMAIL }}
           feed_list: "https://medium.com/feed/androiddevelopers,https://medium.com/feed/firebase-developers,https://medium.com/feed/googleplaydev,https://www.youtube.com/feeds/videos.xml?channel_id=UCVHFbqXqoYvEWM1Ddxl0QDg,https://www.youtube.com/feeds/videos.xml?channel_id=UCP4bf6IHJJQehibu6ai__cg,https://www.youtube.com/feeds/videos.xml?channel_id=UCcnSNQb0tLVd8uT7gzI8duA,https://android-developers.blogspot.com/atom.xml,https://firebase.googleblog.com/atom.xml,https://material.io/feed.xml,http://adbackstage.googledevelopers.libsynpro.com/rss"
-          feed_names: "[Android Developers - Medium Publication](https://medium.com/androiddevelopers),[Firebase Developers - Medium Publication](https://medium.com/firebase-developers),[Google Play - Medium Publication](https://medium.com/googleplaydev),[Android Developers - Youtube Channel](https://www.youtube.com/c/AndroidDevelopers),[Firebase - Youtube Channel](https://www.youtube.com/user/Firebase),[Material Design - Youtube Channel](https://www.youtube.com/c/MaterialDesign),[Android Developers Blog](https://android-developers.googleblog.com/),[The Firebase Blog](https://firebase.googleblog.com/),[Material Design Blog](https://material.io/blog),[Android Developers Backstage - Podcasts](https://adbackstage.libsyn.com/)"
+          feed_names: "[Android Developers Medium](https://medium.com/androiddevelopers),[Firebase Developers Medium](https://medium.com/firebase-developers),[Google Play Medium](https://medium.com/googleplaydev),[Android Developers Youtube](https://www.youtube.com/c/AndroidDevelopers),[Firebase Youtube](https://www.youtube.com/user/Firebase),[Material Design Youtube](https://www.youtube.com/c/MaterialDesign),[Android Developers Blog](https://android-developers.googleblog.com/),[The Firebase Blog](https://firebase.googleblog.com/),[Material Design Blog](https://material.io/blog),[Android Developers Backstage Podcast](https://adbackstage.libsyn.com/)"
           item_exec: post.title = post.title.replace('|','-');
           custom_tags: "feed/feed/"
           commit_message: "Updated with the latest news"
